--- a/testDrive/pom.xml
+++ b/testDrive/pom.xml
@@ -23,7 +23,9 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <exclude>**/HelloWorld.class</exclude>
+                        <exclude>**/Main.class</exclude>
+                        <exclude>**/web/**</exclude>
+                        <exclude>**/exception/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
